Desenvolvimento em modo precário da conexão com OAuth2 na API
