# sigaex/src/main/java/br/gov/jfrj/siga/ex/api/v1/AcessoPrivadoOAuth.java
@@ -1,0 +1,12 @@
+package br.gov.jfrj.siga.ex.api.v1;
+
+import java.lang.annotation.ElementType;
+import java.lang.annotation.Retention;
+import java.lang.annotation.RetentionPolicy;
+import java.lang.annotation.Target;
+
+@Target({ ElementType.METHOD, ElementType.TYPE })
+@Retention(RetentionPolicy.RUNTIME)
+public @interface AcessoPrivadoOAuth {
+
+}
