# sigaex/src/main/java/br/gov/jfrj/siga/ex/api/v1/PreAuthorize.java
@@ -1,0 +1,19 @@
+package br.gov.jfrj.siga.ex.api.v1;
+
+import static java.lang.annotation.ElementType.METHOD;
+import static java.lang.annotation.ElementType.TYPE;
+import static java.lang.annotation.RetentionPolicy.RUNTIME;
+
+import java.lang.annotation.Documented;
+import java.lang.annotation.Retention;
+import java.lang.annotation.Target;
+
+@Documented
+@Retention(RUNTIME)
+@Target({ TYPE, METHOD })
+public @interface PreAuthorize {
+
+	String method();
+	String securityClass();
+
+}
