# sigaex/src/main/java/br/gov/jfrj/siga/ex/api/v1/SigaSecurity.java
@@ -1,0 +1,14 @@
+package br.gov.jfrj.siga.ex.api.v1;
+
+public class SigaSecurity {
+	
+	
+	public boolean hasAuthority(String authorityName) {
+		return false;
+	}
+	
+	public boolean podeConsultarTeste() {
+		return false;
+	}
+
+}
